--- a/study bug reporting, improvements/pre_CAM/src/css/style.css
+++ b/study bug reporting, improvements/pre_CAM/src/css/style.css
@@ -8,10 +8,89 @@ footer {
 }
 */
 
-.center-content div {
-  margin: 0 auto;
-  display: inline-block; /* Or 'block' with 'text-align: center' on the parent */
+.icon-checkbox {
+  display: none; /* Hide the actual checkbox */
 }
+
+.icon-label {
+  cursor: pointer;
+  padding: 10px;
+  border: 1px solid #ccc;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  margin: 5px;
+  transition: background-color 0.3s;
+}
+
+.icon-checkbox:checked + .icon-label {
+  background-color: #4CAF50; /* Highlight color for selected */
+  color: white;
+}
+
+
+
+
+.dragBox {
+  width: 90%;
+  height: 150px;
+  margin: 0 auto;
+  margin-left: 10%;
+  text-align: center;
+  font-weight: bold;
+  line-height: 50px;
+  background-color: rgb(186, 186, 186);
+  border: 2px solid black;
+  display: inline-block;
+  transition: transform 0.3s;
+  input[type="file"] {
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    top: 0;
+    left: 0;
+  }
+}
+.draging {
+  transform: scale(1.3);
+}
+
+
+#preview {
+  width: 95%;
+  margin: 0 auto;
+  img {
+    max-width: 95%;
+    max-height: 200px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 #toprightdiv {
